<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2022 CannedShroud
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">KProfiles Service</string>

    <!-- Pref keys -->
    <string name="pref_key_intro" translatable="false">kprofiles_intro</string>
    <string name="pref_key_enabled" translatable="false">kprofiles_enabled</string>
    <string name="pref_key_auto" translatable="false">kprofiles_auto</string>
    <string name="pref_key_modes" translatable="false">kprofiles_modes</string>
    <string name="pref_key_modes_info" translatable="false">kprofiles_modes_info</string>

    <!-- Intent action -->
    <string name="kprofiles_intent_action" translatable="false">com.android.kprofiles.battery.KPROFILE_CHANGED</string>

    <!-- Entry points in Settings -->
    <string name="kprofiles_title">KProfiles</string>
    <string name="kprofiles_summary">Managing Kernelspace profiles to achieve balancing in terms of battery backup and performance</string>
    <string name="kprofiles_search_keywords">KProfiles, Auto KProfiles, KProfiles Modes, kernel, battery, profiles, performance</string>

    <!-- Main swtich -->
    <string name="kprofiles_enabled_title">Use KProfiles</string>

    <!-- Auto KProfiles -->
    <string name="kprofiles_auto_title">Auto KProfiles</string>
    <string name="kprofiles_auto_summary">Automatically switch to battery mode when device screen turns off and back to default profile when screen turns on</string>

    <!-- KProfiles Modes -->
    <string name="kprofiles_modes_title">KProfiles Modes</string>
    <string name="kprofiles_modes_none">None</string>
    <string name="kprofiles_modes_battery">Battery</string>
    <string name="kprofiles_modes_balanced">Balanced</string>
    <string name="kprofiles_modes_performance">Performance</string>
    <string name="kprofiles_modes_description" translatable="false"><xliff:g id="description">%s</xliff:g></string>
    <string name="kprofiles_modes_none_description">Regulate and manage in-kernel activities in a profile-oriented manner to achieve balance in terms of battery backup and performance accordingly</string>
    <string name="kprofiles_modes_battery_description">Battery Mode:\nSkip all userspace and/or in-kernel boosts, reduces gpu scaling frequency</string>
    <string name="kprofiles_modes_balanced_description">Balanced Mode:\nTips the balance between battery and performance modes</string>
    <string name="kprofiles_modes_performance_description">Performance Mode:\nMaximize all boosts, increases gpu scaling frequency to its max</string>

    <!-- Unsupported -->
    <string name="kprofiles_not_supported">KProfiles is not currently supported by the kernel</string>
</resources>
